--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -84,5 +84,14 @@ Coppelia Robotics,
 \emph{\href{http://www.coppeliarobotics.com/helpFiles/en/writingCode.htm}{Writing code in and around V-REP}},  
 2015
 
+\bibitem{creately12}
+Creately,
+\emph{\href{http://creately.com/blog/diagrams/uml-diagram-types-examples/}{The Complete Guide to UML Diagram Types with Examples}},  
+2012
+
+\bibitem{ambler01}
+Scott W. Ambler,
+\emph{\href{http://agilemodeling.com/}{Agile Modeling (AM) Effective Practices for Modeling and Documentation}},  
+2001-2014
 
 \end{thebibliography}
