--- a/pfc.tex
+++ b/pfc.tex
@@ -51,6 +51,7 @@
 \usepackage{svg}
 \usepackage{subfig}
 \usepackage{epigraph}
+\usepackage{pdfpages}
 \usepackage[pdftex,
             pdfauthor={Daniel Peiró Moreno},
             pdftitle={HTML5 Robot User Interface},
@@ -79,6 +80,11 @@
 
 \tableofcontents
 
+\textbf{Reading Notes}: The above table of contents is linked to each of the sections for fast navigation. All references
+to other sections in the text are also clickable links. External hyperlinks and URLs are highlighted in pink. Direct quotes
+and factual statements include numbered links in green to their source in the References. A linked list of figures is
+available for reference at the end of this report.
+
 \input{./summary/summary}
 
 \input{./introduction/introduction}
@@ -95,8 +101,9 @@
 
 \input{./annexes/annexes}
 
+\input{./bibliography/bibliography}
 \listoffigures
 \printindex
-\input{./bibliography/bibliography}
+
 
 \end{document}
