Finished Client-Server Architecture.

--- a/pfc.tex
+++ b/pfc.tex
@@ -79,7 +79,9 @@
 \input{./acknowledgements/acknowledgements}
 
 \tableofcontents
-
+\begin{center}
+\line(1,0){250}
+\end{center}
 \textbf{Reading Notes}: The above table of contents is linked to each of the sections for fast navigation. All references
 to other sections in the text are also clickable links. External hyperlinks and URLs are highlighted in pink. Direct quotes
 and factual statements include numbered links in green to their source in the References. A linked list of figures is
