Finished System Architecture. Added software used to references.

--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -10,30 +10,37 @@
   The Internet Society,
   \emph{\href{http://tools.ietf.org/html/rfc2616}{Hypertext Transfer Protocol -- HTTP/1.1}},  
   1999.
+
 \bibitem{bernerslee09}
   Tim Berners-Lee,
   \emph{\href{http://www.ted.com/talks/tim_berners_lee_on_the_next_web?language=en}{Tim Berners-Lee TED Talk on the Next Web}},  
   2009.
+
 \bibitem{raggett98}
   Dave Raggett,
   \emph{\href{http://www.w3.org/People/Raggett/book4/ch02.html}{Raggett on HTML 4 (Chapter 2: A history of HTML)}},  
   1998.
+
 \bibitem{marshall12}
   James Marshall,
   \emph{\href{http://www.jmarshall.com/easy/http/}{HTTP Made Really Easy}},  
   2012.
+  
 \bibitem{goldfarb96}
 Charles F. Goldfarb,
 \emph{\href{http://www.sgmlsource.com/history/roots.htm}{The Roots of SGML -- A Personal Recollection}},  
 1996.
+
 \bibitem{rauschmayer14}
 Dr. Axel Rauschmayer,
 \emph{\href{http://speakingjs.com/es5/}{Speaking JavaScript -- An In-Depth Guide for Programmers (Free Online Version)}},  
 2014.
+
 \bibitem{liebos99}
 Håkon Wium Lie and Bert Bos,
 \emph{\href{http://www.w3.org/Style/LieBos2e/history/Overview.html}{Cascading Style Sheets, designing for the Web}},  
 1999.
+
 \bibitem{w3c11}
 World Wide Web Consortium,
 \emph{\href{http://www.w3.org/html/logo/faq.html}{W3C HTML5 Logo FAQ}},  
@@ -58,11 +65,6 @@ Mark Pilgrim,
 World Wide Web Consortium,
 \emph{\href{https://validator.w3.org/}{W3C Markup Validation Service}},  
 1994-2012
-
-\bibitem{nodejs15}
-Node.js Foundation,
-\emph{\href{https://nodejs.org/}{Node.js}},  
-2015
 
 \bibitem{nodesummit12}
 Ryan Dahl,
@@ -93,5 +95,125 @@ Creately,
 Scott W. Ambler,
 \emph{\href{http://agilemodeling.com/}{Agile Modeling (AM) Effective Practices for Modeling and Documentation}},  
 2001-2014
+
+\bibitem{w3cgamepad15}
+World Wide Web Consortium,
+\emph{\href{http://www.w3.org/TR/gamepad/}{W3C Gamepad API Working Draft}},  
+29 April 2015
+
+\bibitem{caniusegamepad15}
+caniuse.com,
+\emph{\href{http://caniuse.com/\#feat=gamepad}{Browser Support Tables for Gamepad API.} Note: Table inaccurate with regards to mobile browsers: Chromium and Firefox mobile versions have support.},  
+2015
+
+\bibitem{caniusespeech15}
+caniuse.com,
+\emph{\href{http://caniuse.com/\#feat=speech-recognition}{Browser Support Tables for Speech Recognition API}},  
+2015
+
+\bibitem{nodejs15}
+Node.js Foundation,
+\emph{\href{https://nodejs.org/}{Node.js}},  
+2015
+
+\bibitem{angularjs15}
+Google,
+\emph{\href{https://angularjs.org/}{AngularJS Framework}},  
+2010-2015
+
+\bibitem{express15}
+StrongLoop Inc,
+\emph{\href{http://expressjs.com/}{Express Node Web Framework}},  
+2015
+
+\bibitem{mongodb15}
+MongoDB Inc,
+\emph{\href{https://www.mongodb.org/}{mongoDB}},  
+2015
+
+\bibitem{socketio15}
+Socket.IO,
+\emph{\href{http://socket.io/}{Socket.IO}},  
+2015
+
+\bibitem{ws11}
+Einar Otto Stangvik,
+\emph{\href{https://github.com/websockets/ws}{ws}},  
+2011
+
+\bibitem{nodepngjs12}
+Kuba Niegowski,
+\emph{\href{https://github.com/niegowski/node-pngjs}{node-pngjs}},  
+2012
+
+\bibitem{busboy13}
+Brian White,
+\emph{\href{https://github.com/mscdex/busboy}{busboy}},  
+2013
+
+\bibitem{monk12}
+Guillermo Rauch,
+\emph{\href{https://github.com/Automattic/monk}{monk}},  
+2012
+
+\bibitem{debug14}
+TJ Holowaychuk,
+\emph{\href{https://github.com/visionmedia/debug}{debug}},  
+2014
+
+\bibitem{annyang15}
+Tal Ater,
+\emph{\href{https://github.com/TalAter/annyang}{Annyang!}},  
+2015
+
+\bibitem{recordrtc15}
+Muaz Khan,
+\emph{\href{https://github.com/muaz-khan/WebRTC-Experiment/tree/master/RecordRTC}{RecordRTC}},  
+2015
+
+\bibitem{jsmpeg15}
+Dominic Szablewski,
+\emph{\href{https://github.com/phoboslab/jsmpeg}{jsmpeg}},  
+2015
+
+\bibitem{aurora15}
+Audiocogs,
+\emph{\href{https://github.com/audiocogs/aurora.js/}{aurora.js}},  
+2015
+
+\bibitem{auroraws15}
+Fabien Brooke,
+\emph{\href{https://github.com/fsbdev/aurora-websocket}{aurora.js websockets}},  
+2015
+
+\bibitem{googlemaps15}
+Google,
+\emph{\href{https://developers.google.com/maps/?hl=en}{Google Maps API}},  
+2015
+
+\bibitem{coppelia06}
+Coppelia Robotics GmbH.,
+\emph{\href{http://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm}{V-REP Python Remote API}},  
+2006-2014 
+
+\bibitem{kteam10}
+K-Team,
+\emph{\href{http://ftp.k-team.com/korebot/libkorebot-doc/main.html}{Khepera III KoreBot Library}},  
+2010
+
+\bibitem{bitcraze15}
+Bitcraze,
+\emph{\href{https://github.com/bitcraze/crazyflie-clients-python}{Crazyflie 2 Python Library}},  
+2015
+
+\bibitem{rollingspider15}
+Jack Watson-Hamblin \& Chris Taylor,
+\emph{\href{https://github.com/voodootikigod/node-rolling-spider}{Parrot Rolling Spider JavaScript Library} Note: use undocumented for time constraints and similarity with other integrations},  
+2015
+
+\bibitem{avconv15}
+Libav.org,
+\emph{\href{https://libav.org/}{avconv}},  
+2015
 
 \end{thebibliography}
